# pandas-datapackage-reader

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml
pandas_datapackage_reader/: __init__.py  _version.py
tests/: test_pandas_datapackage_reader.py
tests/test-package/: data-8859-1.csv  data.csv  datapackage.json  datawithints.csv  datawithmixedtypes.csv  datawiththousands.csv  datetimes.csv  europeandata.csv  moredata.csv
