[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[versioneer]
VCS = git
style = pep440
versionfile_source = pandas_datapackage_reader/_version.py
versionfile_build = pandas_datapackage_reader/_version.py
tag_prefix = v
parentdir_prefix = pandas_datapackage_reader-
